# tbbn-bnn-hls

./: .gitattributes  .gitignore  .lfsconfig  .zenodo.json  README.md  pyproject.toml  run.sh  stats.md
datas/: ecdf_trace_samples.csv  jst_binarynetv5_stats.csv  mnist_binarynetv5_stats.csv  unsw_binarynetv5_stats.csv
hls/jst/config1/: log_saif_from_timing_simulation.tcl
hls/jst/config1/src/: binarynet.cpp  binarynet.h  r_5.h  r_5_16_4.cpp  r_5_16_4_params.h  r_5n1.cpp  r_64_16.cpp  r_64_16.h  r_64_16_params.h
hls/jst/config1/tb/: tb_binarynet.v
hls/jst/config2/: csynth_impl_pr.tcl  power_from_saif.tcl
hls/jst/config2/src/: binarynet.h  r_5_16_4.cpp  r_5_16_4_params.h  r_5_5.cpp  r_5_5.h  r_5_5_params.h  r_5n1.h  r_64_16.cpp  r_64_16_params.h
hls/jst/config2/tb/: tb_binarynet.v
hls/jst/config3/src/: Accelerator.h  BinaryNet.cpp  getParamCounts.sh  (+5 more)
hls/jst/config4/: csynth_impl_pr.tcl
hls/jst/config5/: kill_vitis.sh  normalize_saif.py
hls/mnist/config1/: csynth_impl_pr.tcl
hls/mnist/config2/: gen_post_impl_timing_xsim.tcl  gen_post_synth_timing_xsim.tcl  get_power_report.sh  power_from_saif.tcl  run.sh
hls/mnist/config4/: csynth_impl_pr.tcl
hls/mnist/config5/: csynth_impl_pr.tcl  kill_vitis.sh  power_from_saif.tcl
hls/mnist/config6/: csynth_impl_pr.tcl  log_saif_from_timing_simulation.tcl
hls/unsw-nb15/config1/: run.sh
hls/unsw-nb15/config3/: csynth_impl_pr.tcl
hls/unsw-nb15/config4/: power_from_saif.tcl
scripts/: calculate_statistics.py  ecdfs.py  ecdfs_logy_latex.py  margin_dist.py  preacts_vs_thresholds_scatter.py  run_hls_config.sh
(+135 files in other folders)
